# msi-wmi-platform-dkms

./: .gitignore  LICENSE  README.md  install.sh
docs/: capability-map.md  ec-ram-map.md  ec-register-map.md  fan-curve-rpm.md  feature-catalog.md  hardware-support.md  hw-test-protocol.md  msi-center-architecture.md  register-consistency.md  review-guide.md  upstream-state.md
fan-curve/: 50-msi-fan-curve  README.md  msi-fan-curve  msi-fan-curve.conf  msi-fan-curve.service
keyboard-rgb/: KLC-PROTOCOL.md  OPENRGB-INTREE-GUIDE.md  README.md  extract-klc-models.py  extract-msi-layouts.py  gen-openrgb-gs66.py  gs66-keymap.json  klc-cmd.py  msi-klc-models.json  msi-layouts.json  msi-nb-rgb.py  msi-perkeyrgb-fixes.patch  openrgb-gs66-arrays.h  openrgb-gs66-draft.md  steelseries-klc-findings.json  uleds-osd-test.py
keyboard-rgb/msi-klc/: Cargo.toml  README.md
keyboard-rgb/msi-klc/packaging/: README.md  msi-klc-daemon.service
keyboard-rgb/msi-klc/src/: daemon.rs  device.rs  layout.rs  main.rs  models.rs  protocol.rs  state.rs
keyboard-rgb/openrgb-plugin/: .gitignore  60-openrgb-msi-klc.rules  MSIKLCController.cpp  MSIKLCController.h  OpenRGBMSIKLCPlugin.cpp  OpenRGBMSIKLCPlugin.h  OpenRGBMSIKLCPlugin.pro  README.md  RGBController_MSIKLC.cpp  RGBController_MSIKLC.h
msi-center-manifest/: README.md  build-manifest-db.py  decrypt-msi-dat.py
msi-wmi-platform/: Makefile  README.md  base.c  blink.sh  dkms.conf  msi-wmi-platform.c  regen.sh  sweep.sh
msi-wmi-platform/patches-upstream/: 0000-cover-letter.patch  NOTES.md  (+16 more)
suspend/: README.md  sleep.conf.example
(+5 files in other folders)
